<resources>
    <string name="app_name">Baby Care Tips</string>
    <string name="enter_email">Enter Email</string>
    <string name="send_email">Send Email</string>
    <string name="login_again">Login Again</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Saved Notes</string>
    <string name="create_new_account">Create new account</string>
    <string name="choose_a_profile_picture">Choose a profile Picture (Optional)</string>
    <string name="enter_your_baby_s_name">Enter your Baby\'s Name</string>
    <string name="your_baby_s_name">Your Baby\'s Name</string>
    <string name="enter_your_name">Enter your Name (Optional)</string>
    <string name="your_name">Your Name (Optional)</string>
    <string name="enter_your_phone_number">Enter your phone number (Optional)</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="baby_boy">Baby Boy</string>
    <string name="baby_girl">Baby Girl</string>
    <string name="enter_your_baby_s_gender">Enter your Baby\'s Gender</string>
    <string name="your_baby_s_gender">Your Baby\'s Gender</string>
    <string name="sign_up">Sign up</string>
    <string name="already_registered">Already Registered?</string>
    <string name="login_here">Login Here</string>
    <string name="change_of_plans">Change of plans?</string>
    <string name="in_the_mother_s_lap">In the mother\'s lap</string>
    <string name="remember_it">Remember it?</string>
    <string name="recover_it">Recover it</string>
    <string name="join_today">Join today</string>
    <string name="enter_date_of_birth_of_your_baby">Enter date of birth of your baby (DD/MM/YYY)</string>
    <string name="date_of_birth_of_your_baby">Date of birth of your baby (DD/MM/YYY)</string>
    <string name="mainScreen">MainScreen</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="home">Home</string>
    <string name="development">Development</string>
    <string name="track_progress">Track Progress</string>
    <string name="how_to">How to</string>
    <string name="ask_specialist">Ask Specialist</string>
    <string name="nothing">Nothing</string>
    <string name="recover_password">Recover Password</string>
    <string name="current_development_stage_of_your_baby">Current Development Stage of your Baby</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_as_a_mother">Join as a mother?</string>
    <string name="join_as_a_specialist">Join as a specialist?</string>
    <string name="title_image">Title Image</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="add_question">Add Question</string>
    <string name="enter_your_question_here">Enter your Question here</string>
    <string name="please_enter_your_question">Please enter your question...</string>
    <string name="ask_now">Ask now</string>
    <string name="ask_about">Ask about?</string>
    <string name="_0_comments">0 Comments</string>
    <string name="mother_s_questions">Mother\'s Questions</string>
    <string name="sign_up_as_mother">On Boarding</string>
    <string name="sign_up_as_specialist">Sign up as Specialist</string>
    <string name="question_details">Question Details</string>
    <string name="_12_02_2022">12/02/2022</string>
    <string name="answer_the_question">Answer the question...</string>
    <string name="add_comment">Add Comment</string>
    <string name="are_you_sure_you_want_to_delete_nthis_question">Are you sure you want to delete \nthis question?</string>
    <string name="yes">Yes</string>
    <string name="my_profile">My Profile</string>
    <string name="main">Main Menu</string>
    <string name="profile">Proceed</string>
    <string name="my_account">My Account</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="delete_account">Delete Account</string>
    <string name="switch_account">Switch account</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="are_you_sure_you_want_to_delete_nyour_account">Are you sure you want to delete \nyour account?</string>
    <string name="are_you_sure_you_want_to_switch_account">Are you sure you want to switch account?</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="update">Update</string>
    <string name="add_notes">Add Notes</string>
    <string name="add_note">Add Note</string>
    <string name="add_title">Add Title</string>
    <string name="enter_note">Enter note...</string>
    <string name="rate_us">Rate us! If you like the app.</string>
    <string name="exit">Exit</string>
    <string name="rate_now">Rate Now</string>
</resources>