<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" >
    <item
        android:id="@+id/main_item"
        android:title="@string/main">
        <menu>
            <item
                android:id="@+id/home"
                android:icon="@drawable/ic_home"
                android:title="@string/home" />
            <item
                android:id="@+id/development"
                android:icon="@drawable/ic_dev"
                android:title="@string/development" />
            <item
                android:id="@+id/howTo"
                android:icon="@drawable/ic_help"
                android:title="@string/how_to"/>



            <item
                android:id="@+id/note"
                android:icon="@drawable/notes"
                android:title="@string/add_notes"/>

        </menu>
    </item>

    <item
        android:id="@+id/myAccount"
        android:title="@string/my_account">
        <menu>
            <item
                android:id="@+id/profile"
                android:icon="@drawable/ic_baseline_account_circle_24"
                android:title="@string/my_profile"/>


        </menu>
    </item>
    </group>
</menu>