<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/_270sdp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/_10sdp">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                app:lottie_rawRes="@raw/delete_lottie"
                android:layout_gravity="center_horizontal"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure_you_want_to_delete_nthis_question"
                android:textColor="@color/black"
                android:fontFamily="@font/inter_medium"
                android:textSize="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center_horizontal"
                android:paddingVertical="@dimen/_5sdp"
                android:layout_gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <TextView
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:id="@+id/cancel"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter_medium"
                    android:background="@drawable/buttons"
                    android:translationZ="@dimen/_5sdp"
                    android:textSize="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:gravity="center" />

                <TextView
                    android:layout_margin="@dimen/_10sdp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/yes"
                    android:id="@+id/delete"
                    android:textColor="@color/black"
                    android:fontFamily="@font/inter_medium"
                    android:background="@drawable/buttons"
                    android:backgroundTint="@color/appColor"
                    android:gravity="center"
                    android:textSize="@dimen/_10sdp"
                    android:translationZ="@dimen/_5sdp"
                    android:paddingVertical="@dimen/_8sdp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>