<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.AddNoteActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/toolBar"
        android:elevation="@dimen/_20sdp">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/inter_black"
            android:text="Add Note"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_keyboard_backspace_24"
                android:layout_centerVertical="true"
                app:tint="@color/black"
                android:id="@+id/back"/>
        </androidx.appcompat.widget.Toolbar>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/appColor"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:rotation="180"
        android:src="@drawable/ic_splash_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolBar"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:alpha="0.6"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/add_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />

        <androidx.cardview.widget.CardView
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            app:cardBackgroundColor="@color/editTextColor"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="-10dp">

            <EditText
                android:id="@+id/qTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_7sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:background="@color/editTextColor"
                android:fontFamily="@font/inter_medium"
                android:lines="1"
                android:textColor="@color/black"
                android:inputType="text|textCapSentences"
                android:textSize="@dimen/_10sdp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            app:cardBackgroundColor="@color/editTextColor"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_5sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_7sdp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/improveEdittextLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="text"
                        android:textColorHint="@android:color/darker_gray"
                        app:boxBackgroundColor="@color/editTextColor"
                        app:hintEnabled="true"
                        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                        app:hintTextColor="@android:color/darker_gray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/desc"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_140sdp"
                            android:fontFamily="@font/inter_medium"
                            android:gravity="start"
                            android:textSize="@dimen/_10sdp"
                            android:maxLength="2000"
                            android:hint="@string/enter_note"
                            android:inputType="text|textMultiLine|textCapSentences"
                            android:paddingBottom="@dimen/_24sdp"
                            android:text=""
                            android:textColor="@color/black" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageView
                        android:id="@+id/clearText"
                        android:layout_width="@dimen/_12sdp"
                        android:layout_height="@dimen/_12sdp"
                        android:layout_gravity="end"
                        app:tint="@android:color/darker_gray"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:background="@drawable/ic_cross" />

                    <TextView
                        android:id="@+id/counter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_6sdp"
                        android:fontFamily="@font/inter_medium"
                        android:textSize="12sp"
                        android:textColor="@android:color/darker_gray"
                        android:layout_gravity="start|bottom"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:text="0/2,000" />

                </FrameLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/addNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            app:cardBackgroundColor="@color/appColor"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_14sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/add_note"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</RelativeLayout>